# install-requirements

./: LICENSE  README.md  README.py  TEST_OUTPUT.txt  __init__.py  __main__.py  install.sh  rinstall.py  setup.cfg  test.py  test.sh
