[metadata]
name = rinstall
author = yrom1
description = A module for automatically installing the requirements.txt file at runtime
license = MIT
license_files = LICENSE
long-description = file: README.md
project_urls =
    Source Code = https://github.com/yrom1/install_requirements
version = 0.0.1

[options]
py_modules = rinstall
include_package_data = True
python_requires = >= 3.0

[options.packages.find]
where = src
